--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^3.1.0",
+    "string_score": "^0.1.22",
     "utf-8-validate": "^5.0.4"
   }
 }
